# prompt-patrol

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_prompt_saves.py  003_simplify_doc_types.py
hook/: install.sh  prompt_review_hook.py
src/prompt_review/: cli.py  config.py  database.py  main.py
src/prompt_review/api/: health.py  prompts.py  reviews.py
src/prompt_review/models/: __init__.py  daily_report.py  developer.py  product_doc.py  prompt.py  prompt_flag.py  prompt_save.py
src/prompt_review/schemas/: product_doc.py  prompt.py  report.py
src/prompt_review/services/: doc_extractor.py  ingestion.py  pii_masker.py  product_docs.py  review_engine.py
src/prompt_review/static/css/: theme.css
src/prompt_review/templates/: base.html  docs_edit.html  docs_page.html  index.html  product_doc_edit.html  product_docs.html  prompts.html  report.html
src/prompt_review/templates/partials/: prompt_list.html  prompt_save.html  prompt_save_form.html
src/prompt_review/web/: product_docs.py  prompts.py  reports.py
tests/: conftest.py  test_pii_masker.py
tests/test_api/: test_prompts.py
