[project]
name = "prompt-review"
version = "0.1.0"
description = "Collect and review AI coding assistant prompts for product alignment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.42.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
    "PyPDF2>=3.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
prompt-review = "prompt_review.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
